[package]
name = "chunky"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
hickory-resolver = { version = "0.24.1", features = [
    "default",
    "dns-over-native-tls",
    "dns-over-openssl",
    "tokio",
    "tokio-native-tls",
    "tokio-openssl",
] }
url = "2.5.1"
env_logger = "0.11.3"
log = "0.4.21"
openssl = { version = "0.10.64", features = ["vendored"] }
